--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Hi</title>
-    <link rel="stylesheet"  href="../static/css/index.css"></link>
+    <link rel="stylesheet"  href="static/css/index.css"></link>
 </head>
 
 <body>
