--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
-    <link rel="stylesheet" href="../static/css/index.css"></link>
+    <link rel="stylesheet" href="static/css/index.css"></link>
 </head>
 
 <body>
