--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Mohamed Y Abdelnasser</title>
     <link rel="stylesheet" href="static/css/index.css"></link>
 </head>
 
 <body>
-    <h1>Welcome to My Website</h1>
+    <div id="center-card">
+        <div id="profile-img">
+            
+        </div>
+        <div>
+            <p>Hi</p>
+        </div>
+    </div>
 </body>
 
 </html>
