--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div id="overlay">
+
+    </div>
     <div id="main-card">
 
         <div id="profile-img-wrapper">
@@ -22,9 +25,7 @@
             <p id="title">
                 Mohamed Y Abdelnasser
             </p>
-            <p id="subtitle">
-                AI Engineer
-            </p>
+            <div id="subtitle">‎</div>
             <p id="desc">
                 Lorem ipsum dolor sit amet primis blandit gravida. Maximus at donec ridiculus litora ad porttitor id
                 montes turpis enim.
@@ -35,7 +36,7 @@
         <div id="nav-bar">
             <ul>
                 <div id="nav-bar-btn">
-                    <i class="fa fa-car icon"></i>
+                    <i class="fa fa-home icon"></i>
                 </div>
                 <div id="nav-bar-btn">
                     <i class="fa fa-car icon"></i>
@@ -47,6 +48,7 @@
         </div>
 
     </div>
+    <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 
 </html>
