--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mohamed Y Abdelnasser</title>
     <link rel="stylesheet" href="static/css/index.css">
-    </link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/gif" href="static/img/icon.gif">
+
 </head>
 
 <body>
@@ -35,14 +36,17 @@
 
         <div id="nav-bar">
             <ul>
-                <div id="nav-bar-btn">
+                <div id="nav-bar-btn" onclick="homeMenu()">
                     <i class="fa fa-home icon"></i>
                 </div>
                 <div id="nav-bar-btn">
-                    <i class="fa fa-car icon"></i>
+                    <i class="fa fa-user icon"></i>
                 </div>
                 <div id="nav-bar-btn">
-                    <i class="fa fa-car icon"></i>
+                    <i class="fa fa-code icon"></i>
+                </div>
+                <div id="nav-bar-btn">
+                    <i class="fa fa-envelope icon"></i>
                 </div>
             </ul>
         </div>
