--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
 
 <body>
     <div id="overlay">
-
+        About
     </div>
-    <div id="main-card">
+    <div id="home-main-card">
 
-        <div id="profile-img-wrapper">
-            <div id="profile-img"></div>
+        <div id="home-profile-img-wrapper">
+            <div id="home-profile-img"></div>
         </div>
 
-        <div id="content">
-            <p id="title">
+        <div id="home-content">
+            <p id="home-title">
                 Mohamed Y Abdelnasser
             </p>
-            <div id="subtitle">‎</div>
-            <p id="desc">
+            <div id="home-subtitle">‎</div>
+            <p id="home-desc">
                 Lorem ipsum dolor sit amet primis blandit gravida. Maximus at donec ridiculus litora ad porttitor id
                 montes turpis enim.
                 Fames justo pede a nam semper maecenas dictum.
             </p>
         </div>
 
-        <div id="nav-bar">
+        <div id="home-nav-bar">
             <ul>
-                <div id="nav-bar-btn" onclick="homeMenu()">
+                <div id="home-nav-bar-btn" onclick="homeMenuBtn()">
                     <i class="fa fa-home icon"></i>
                 </div>
-                <div id="nav-bar-btn">
+                <div id="home-nav-bar-btn">
                     <i class="fa fa-user icon"></i>
                 </div>
-                <div id="nav-bar-btn">
+                <div id="home-nav-bar-btn">
                     <i class="fa fa-code icon"></i>
                 </div>
-                <div id="nav-bar-btn">
+                <div id="home-nav-bar-btn">
                     <i class="fa fa-envelope icon"></i>
                 </div>
             </ul>
