--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mohamed Y Abdelnasser</title>
     <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="static/css/shared.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/gif" href="static/img/icon.gif">
-
 </head>
 
 <body>
@@ -35,24 +35,25 @@
 
         <div id="home-nav-bar">
             <ul>
-                <div id="home-nav-bar-btn" onclick="navBtn('home')">
+                <div id="home-nav-bar-btn" onclick="navBtn(1)">
                     <i id="home-icon" class="fa fa-home"></i>
                 </div>
-                <div id="home-nav-bar-btn" onclick="navBtn('about')">
+                <div id="home-nav-bar-btn" onclick="navBtn(2)">
                     <i id="home-icon" class="fa fa-user"></i>
                 </div>
-                <div id="home-nav-bar-btn" onclick="navBtn('project')">
+                <div id="home-nav-bar-btn" onclick="navBtn(3)">
                     <i id="home-icon" class="fa fa-code"></i>
                 </div>
-                <div id="home-nav-bar-btn" onclick="navBtn('contact')">
+                <div id="home-nav-bar-btn" onclick="navBtn(4)">
                     <i id="home-icon" class="fa fa-comments"></i>
                 </div>
             </ul>
         </div>
 
     </div>
-
     <script type="text/javascript" src="static/js/index.js"></script>
+    <script type="text/javascript" src="static/js/shared.js"></script>
+
 </body>
 
 </html>
