Finalized the home page

--- a/index.html
+++ b/index.html
@@ -31,21 +31,33 @@
                 montes turpis enim.
                 Fames justo pede a nam semper maecenas dictum.
             </p>
+            <div id="home-social-icons-containter">
+                <a href="https://github.com/Momad-Y" style="text-decoration: none;" target="_blank">
+                    <i class="fa fa-github home-icons fa-2x home-social-icon"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/mohamed-y-abdelnasser/" style="text-decoration: none;"
+                    target="_blank">
+                    <i class="fa fa-linkedin home-icons fa-2x home-social-icon"></i>
+                </a>
+                <a href="mailto:Mohamed.Y.Abdelnasser@gmail.com" style="text-decoration: none;" target="_blank">
+                    <i class="fa fa-envelope-square home-icons fa-2x home-social-icon"></i>
+                </a>
+            </div>
         </div>
 
         <div id="home-nav-bar">
             <ul>
-                <div id="home-nav-bar-btn" onclick="navBtn(1)">
-                    <i id="home-icon" class="fa fa-home"></i>
+                <div class="home-nav-bar-btn" onclick="navBtn(1)">
+                    <i class="fa fa-home home-icons"></i>
                 </div>
-                <div id="home-nav-bar-btn" onclick="navBtn(2)">
-                    <i id="home-icon" class="fa fa-user"></i>
+                <div class="home-nav-bar-btn" onclick="navBtn(2)">
+                    <i class="fa fa-user home-icons"></i>
                 </div>
-                <div id="home-nav-bar-btn" onclick="navBtn(3)">
-                    <i id="home-icon" class="fa fa-code"></i>
+                <div class="home-nav-bar-btn" onclick="navBtn(3)">
+                    <i class="fa fa-code home-icons"></i>
                 </div>
-                <div id="home-nav-bar-btn" onclick="navBtn(4)">
-                    <i id="home-icon" class="fa fa-comments"></i>
+                <div class="home-nav-bar-btn" onclick="navBtn(4)">
+                    <i class="fa fa-comments home-icons"></i>
                 </div>
             </ul>
         </div>
