Created the css and js files for the about page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mohamed Y Abdelnasser</title>
+    <link rel="stylesheet" href="static/css/about.css">
     <link rel="stylesheet" href="static/css/shared.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/gif" href="static/img/icon.gif">
@@ -13,8 +14,53 @@
 </head>
 
 <body>
-    <p>About</p>
+    <div id="about-main-card">
+        <div id="about-title">
+            About Me
+        </div>
+        <div id="about-personal-info">
+            <span id="about-personal-info-title">Personal & Contact Information</span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Full Name: </span>
+                Mohamed Youssef Abdelnasser
+            </span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Age: </span>
+                XX
+            </span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Nationality: </span>
+                Egyptian
+            </span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Address: </span>
+                Egypt, Cairo, Zahraa Al Maadi
+            </span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Study: </span>
+                Artificial Intelligence @ AAST
+            </span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Degree: </span>
+                Undergraduate
+            </span>
+
+            <span class="about-personal-info-q">
+                <span class="about-personal-info-a">Looking For: </span>
+                Internships
+            </span>
+
+        </div>
+    </div>
     <script type="text/javascript" src="static/js/shared.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+    </script>
 </body>
 
 </html>
