Updated the About Page

--- a/about.html
+++ b/about.html
@@ -18,45 +18,61 @@
         <div id="about-title">
             About Me
         </div>
-        <div id="about-personal-info">
-            <span id="about-personal-info-title">Personal & Contact Information</span>
+        <div id="about-div-1">
+            <div id="about-personal-info">
+                <span id="about-personal-info-title">Personal Information</span>
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Full Name: </span>
+                    Mohamed Youssef Abdelnasser
+                </span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Full Name: </span>
-                Mohamed Youssef Abdelnasser
-            </span>
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Age: </span>
+                    XX
+                </span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Age: </span>
-                XX
-            </span>
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Nationality: </span>
+                    Egyptian
+                </span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Nationality: </span>
-                Egyptian
-            </span>
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Address: </span>
+                    Egypt, Cairo, Zahraa Al Maadi
+                </span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Address: </span>
-                Egypt, Cairo, Zahraa Al Maadi
-            </span>
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Study: </span>
+                    Artificial Intelligence @ AAST
+                </span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Study: </span>
-                Artificial Intelligence @ AAST
-            </span>
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Degree: </span>
+                    Undergraduate
+                </span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Degree: </span>
-                Undergraduate
-            </span>
+            </div>
+            <div id="about-knowledge">
+                <span id="about-knowledge-title">Knowledge</span>
 
-            <span class="about-personal-info-q">
-                <span class="about-personal-info-a">Looking For: </span>
-                Internships
-            </span>
+                <span class="about-knowledge-item">1</span>
+                <span class="about-knowledge-item">1</span>
+                <span class="about-knowledge-item">1</span>
+                <span class="about-knowledge-item">1</span>
+
+            </div>
+            <div id="about-interests">
+                <span id="about-interests-title">Interests</span>
+
+                <span class="about-interests-item">1</span>
+                <span class="about-interests-item">1</span>
+                <span class="about-interests-item">1</span>
+                <span class="about-interests-item">1</span>
+
+            </div>
 
         </div>
+
     </div>
     <script type="text/javascript" src="static/js/shared.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
