Added the Change Theme Toggler

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 </head>
 
 <body>
-    <div id="overlay">
+    <div id="toggle-theme-container">
+        <label id="toggler-label">
+            <input id="toggler-input" type="checkbox">
+            <span id="toggler-slider"></span>
+            <span id="toggler-state"></span>
+        </label>
     </div>
+
     <div id="home-main-card">
 
         <div id="home-profile-img-wrapper">
@@ -27,7 +33,8 @@
             </p>
             <div id="home-subtitle">‎</div>
             <p id="home-desc">
-                Lorem ipsum dolor sit amet primis blandit gravida. Maximus at donec ridiculus litora ad porttitor id
+                Lorem ipsum dolor sit amet primis blandit gravida. Maximus at donec ridiculus litora ad
+                porttitor id
                 montes turpis enim.
                 Fames justo pede a nam semper maecenas dictum.
             </p>
@@ -63,6 +70,10 @@
         </div>
 
     </div>
+
+    <div id="overlay">
+    </div>
+
     <script type="text/javascript" src="static/js/index.js"></script>
     <script type="text/javascript" src="static/js/shared.js"></script>
 
