Added Functionality to the Toggle Button

--- a/about.html
+++ b/about.html
@@ -14,10 +14,19 @@
 </head>
 
 <body>
+    <div id="toggle-theme-container">
+        <label id="toggler-label">
+            <input id="toggler-input" type="checkbox">
+            <span id="toggler-slider"></span>
+            <span id="toggler-state"></span>
+        </label>
+    </div>
+
     <div id="about-main-card">
         <div id="about-title">
             About Me
         </div>
+
         <div id="about-div-1">
             <div id="about-personal-info">
                 <span id="about-personal-info-title">Personal Information</span>
@@ -52,6 +61,7 @@
                 </span>
 
             </div>
+
             <div id="about-knowledge">
                 <span id="about-knowledge-title">Knowledge</span>
 
@@ -59,8 +69,8 @@
                 <span class="about-knowledge-item">1</span>
                 <span class="about-knowledge-item">1</span>
                 <span class="about-knowledge-item">1</span>
-
             </div>
+
             <div id="about-interests">
                 <span id="about-interests-title">Interests</span>
 
@@ -68,15 +78,12 @@
                 <span class="about-interests-item">1</span>
                 <span class="about-interests-item">1</span>
                 <span class="about-interests-item">1</span>
-
             </div>
-
         </div>
-
     </div>
+
     <script type="text/javascript" src="static/js/shared.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
