Added Menu to the About Page

--- a/about.html
+++ b/about.html
@@ -21,6 +21,22 @@
             <span id="toggler-state"></span>
         </label>
     </div>
+    <div id="about-nav-bar">
+        <ul>
+            <div class="about-nav-bar-btn" id="first" onclick="navBtn(1)">
+                <i class="fa fa-home icons"></i>
+            </div>
+            <div class="about-nav-bar-btn" id="second" onclick="navBtn(2)">
+                <i class="fa fa-user icons"></i>
+            </div>
+            <div class="about-nav-bar-btn" id="third" onclick="navBtn(3)">
+                <i class="fa fa-code icons"></i>
+            </div>
+            <div class="about-nav-bar-btn" id="last" onclick="navBtn(4)">
+                <i class="fa fa-comments icons"></i>
+            </div>
+        </ul>
+    </div>
 
     <div id="about-main-card">
         <div id="about-title">
@@ -80,6 +96,9 @@
                 <span class="about-interests-item">1</span>
             </div>
         </div>
+    </div>
+
+    <div id="overlay">
     </div>
 
     <script type="text/javascript" src="static/js/shared.js"></script>
