--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             </p>
             <div id="home-social-icons-containter">
                 <a href="https://github.com/Momad-Y" style="text-decoration: none;" target="_blank">
-                    <i class="fa fa-github home-icons fa-2x home-social-icon"></i>
+                    <i class="fa fa-github icons fa-2x home-social-icon"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/mohamed-y-abdelnasser/" style="text-decoration: none;"
                     target="_blank">
-                    <i class="fa fa-linkedin home-icons fa-2x home-social-icon"></i>
+                    <i class="fa fa-linkedin icons fa-2x home-social-icon"></i>
                 </a>
                 <a href="mailto:Mohamed.Y.Abdelnasser@gmail.com" style="text-decoration: none;" target="_blank">
-                    <i class="fa fa-envelope-square home-icons fa-2x home-social-icon"></i>
+                    <i class="fa fa-envelope-square icons fa-2x home-social-icon"></i>
                 </a>
             </div>
         </div>
@@ -55,16 +55,16 @@
         <div id="home-nav-bar">
             <ul>
                 <div class="home-nav-bar-btn" onclick="navBtn(1)">
-                    <i class="fa fa-home home-icons"></i>
+                    <i class="fa fa-home icons"></i>
                 </div>
                 <div class="home-nav-bar-btn" onclick="navBtn(2)">
-                    <i class="fa fa-user home-icons"></i>
+                    <i class="fa fa-user icons"></i>
                 </div>
                 <div class="home-nav-bar-btn" onclick="navBtn(3)">
-                    <i class="fa fa-code home-icons"></i>
+                    <i class="fa fa-code icons"></i>
                 </div>
                 <div class="home-nav-bar-btn" onclick="navBtn(4)">
-                    <i class="fa fa-comments home-icons"></i>
+                    <i class="fa fa-comments icons"></i>
                 </div>
             </ul>
         </div>
