Added a Scroll Back to Top Button

--- a/about.html
+++ b/about.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+    <a id="to-top-btn"></a>
+
     <div id="toggle-theme-container">
         <label id="toggler-label">
             <input id="toggler-input" type="checkbox">
@@ -103,6 +106,7 @@
     </div>
 
     <script type="text/javascript" src="static/js/shared.js"></script>
+    <script type="text/javascript" src="static/js/about.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
