Added My Skills Section

--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
             About Me
         </div>
 
+        <hr>
+
+
         <div id="about-div-1">
             <div id="about-personal-info">
                 <span id="about-personal-info-title">Personal Information</span>
@@ -80,6 +83,11 @@
                     Undergraduate
                 </span>
 
+                <span class="about-personal-info-q">
+                    <span class="about-personal-info-a">Fluent in: </span>
+                    English, Arabic
+                </span>
+
             </div>
 
             <div id="about-knowledge">
@@ -98,6 +106,56 @@
                 <span class="about-interests-item">1</span>
                 <span class="about-interests-item">1</span>
                 <span class="about-interests-item">1</span>
+            </div>
+        </div>
+
+        <hr>
+
+        <span id="about-div-2-title">My Skills</span>
+        <div id="about-div-2">
+
+            <div id="about-programming-skills">
+                <span id="about-programming-skills-title">Programming Skills</span>
+
+                <div class="about-programming-skills-item">
+                    HTML
+                    95%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+
+                <div class="about-programming-skills-item">
+                    JS
+                    50%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+
+
+            </div>
+
+            <div></div>
+
+            <div id="about-soft-skills">
+                <span id="about-soft-skills-title">Soft Skills</span>
+
+                <div class="about-programming-skills-item">
+                    TeamWork
+                    90%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+
+                <div class="about-programming-skills-item">
+                    TimeManagement
+                    85%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
             </div>
         </div>
     </div>
