Changed Page Size

--- a/about.html
+++ b/about.html
@@ -49,7 +49,6 @@
 
         <hr>
 
-
         <div id="about-div-1">
             <div id="about-personal-info">
                 <span id="about-personal-info-title">Personal Information</span>
@@ -158,6 +157,56 @@
                 </div>
             </div>
         </div>
+
+        <hr>
+
+        <span id="about-div-2-title">Experience & Education</span>
+        <div id="about-div-2">
+
+            <div id="about-programming-skills">
+                <span id="about-programming-skills-title">Programming Skills</span>
+
+                <div class="about-programming-skills-item">
+                    HTML
+                    95%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+
+                <div class="about-programming-skills-item">
+                    JS
+                    50%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+
+
+            </div>
+
+            <div></div>
+
+            <div id="about-soft-skills">
+                <span id="about-soft-skills-title">Soft Skills</span>
+
+                <div class="about-programming-skills-item">
+                    TeamWork
+                    90%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+
+                <div class="about-programming-skills-item">
+                    TimeManagement
+                    85%
+                </div>
+                <div class="progress-bar">
+                    <div class="progress-bar-progress"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="overlay">
@@ -165,7 +214,6 @@
 
     <script type="text/javascript" src="static/js/shared.js"></script>
     <script type="text/javascript" src="static/js/about.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
