--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <a href="mailto:Mohamed.Y.Abdelnasser@gmail.com" style="text-decoration: none;" target="_blank">
                     <i class="fa fa-envelope-square icons fa-2x home-social-icon"></i>
                 </a>
+                <a href="static/docs/Ezn Sfr UAE 11-04-2023.pdf" style="text-decoration: none;" id="home-cv-logo"
+                    target="_blank">
+                    CV
+                </a>
             </div>
         </div>
 
