Changed the page's design

--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
 
 <body>
 
-    <a id="to-top-btn"></a>
 
     <div id="toggle-theme-container">
         <label id="toggler-label">
@@ -27,18 +26,22 @@
 
     <div id="about-nav-bar">
         <ul>
-            <div class="about-nav-bar-btn" id="first" onclick="navBtn(1)">
+            <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(1)">
                 <i class="fa fa-home icons"></i>
             </div>
-            <div class="about-nav-bar-btn" id="second" onclick="navBtn(2)">
+            <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(2)">
                 <i class="fa fa-user icons"></i>
             </div>
-            <div class="about-nav-bar-btn" id="third" onclick="navBtn(3)">
+            <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(3)">
                 <i class="fa fa-code icons"></i>
             </div>
-            <div class="about-nav-bar-btn" id="last" onclick="navBtn(4)">
+            <div class="about-nav-bar-btn about-nav-bar-btn-redirect" onclick="navBtn(4)">
                 <i class="fa fa-comments icons"></i>
             </div>
+            <div class="about-nav-bar-btn" id="to-top-btn">
+                <i class="fa fa-hand-o-up icons"></i>
+            </div>
+
         </ul>
     </div>
 
