Added Experience & Education section

--- a/about.html
+++ b/about.html
@@ -120,16 +120,24 @@
                 <span id="about-programming-skills-title">Programming Skills</span>
 
                 <div class="about-programming-skills-item">
-                    HTML
-                    95%
+                    <div class="about-programming-skills-item-name">
+                        HTML
+                    </div>
+                    <div class="about-programming-skills-item-percentage">
+                        95%
+                    </div>
                 </div>
                 <div class="progress-bar">
                     <div class="progress-bar-progress"></div>
                 </div>
 
                 <div class="about-programming-skills-item">
-                    JS
-                    50%
+                    <div class="about-programming-skills-item-name">
+                        JS
+                    </div>
+                    <div class="about-programming-skills-item-percentage">
+                        50%
+                    </div>
                 </div>
                 <div class="progress-bar">
                     <div class="progress-bar-progress"></div>
@@ -144,16 +152,24 @@
                 <span id="about-soft-skills-title">Soft Skills</span>
 
                 <div class="about-programming-skills-item">
-                    TeamWork
-                    90%
+                    <div class="about-programming-skills-item-name">
+                        Team Work
+                    </div>
+                    <div class="about-programming-skills-item-percentage">
+                        90%
+                    </div>
                 </div>
                 <div class="progress-bar">
                     <div class="progress-bar-progress"></div>
                 </div>
 
                 <div class="about-programming-skills-item">
-                    TimeManagement
-                    85%
+                    <div class="about-programming-skills-item-name">
+                        Time Management
+                    </div>
+                    <div class="about-programming-skills-item-percentage">
+                        85%
+                    </div>
                 </div>
                 <div class="progress-bar">
                     <div class="progress-bar-progress"></div>
@@ -163,51 +179,108 @@
 
         <hr>
 
-        <span id="about-div-2-title">Experience & Education</span>
-        <div id="about-div-2">
+        <span id="about-div-3-title">Experience & Education</span>
+        <div id="about-div-3">
 
-            <div id="about-programming-skills">
-                <span id="about-programming-skills-title">Programming Skills</span>
+            <div id="about-experience">
+                <span id="about-experience-title">Experience</span>
 
-                <div class="about-programming-skills-item">
-                    HTML
-                    95%
+                <div id="about-experience-education-timeline">
+                    <ul>
+                        <li>
+                            <span>3rd January 2020</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the
+                                    industry's standard dummy text ever since the 1500s.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>21st Jun 2019</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>15th April 2018</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>22nd Mars 2017</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the
+                                    industry's standard.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="progress-bar">
-                    <div class="progress-bar-progress"></div>
-                </div>
-
-                <div class="about-programming-skills-item">
-                    JS
-                    50%
-                </div>
-                <div class="progress-bar">
-                    <div class="progress-bar-progress"></div>
-                </div>
-
-
             </div>
 
             <div></div>
 
-            <div id="about-soft-skills">
-                <span id="about-soft-skills-title">Soft Skills</span>
+            <div id="about-education">
+                <span id="about-education-title">Education</span>
 
-                <div class="about-programming-skills-item">
-                    TeamWork
-                    90%
-                </div>
-                <div class="progress-bar">
-                    <div class="progress-bar-progress"></div>
+                <div id="about-experience-education-timeline">
+                    <ul>
+                        <li>
+                            <span>3rd January 2020</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the
+                                    industry's standard dummy text ever since the 1500s.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>21st Jun 2019</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>15th April 2018</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>22nd Mars 2017</span>
+                            <div class="content">
+                                <h3>What Is Lorem Ipsum?</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the
+                                    industry's standard.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
 
-                <div class="about-programming-skills-item">
-                    TimeManagement
-                    85%
-                </div>
-                <div class="progress-bar">
-                    <div class="progress-bar-progress"></div>
-                </div>
             </div>
         </div>
     </div>
