Added live age calculation

--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
                     Mohamed Youssef Abdelnasser
                 </span>
 
-                <span class="about-personal-info-q">
+                <span class="about-personal-info-q" id="about-age-value">
                     <span class="about-personal-info-a">Age: </span>
-                    XX
+
                 </span>
 
                 <span class="about-personal-info-q">
