--- a/about.html
+++ b/about.html
@@ -283,6 +283,62 @@
 
             </div>
         </div>
+
+        <hr>
+
+        <span id="about-div-4-title">Certifications</span>
+        <div id="about-div-4">
+
+            <div id="about-certifications">
+                <div class="about-slides">
+                    <div class="about-slide-number"></div>
+                    <img class="about-slide-img" src="static/img/476255.png">
+                </div>
+
+                <div class="about-slides">
+                    <div class="about-slide-number"></div>
+                    <img class="about-slide-img" src="static/img/476259.jpg">
+                </div>
+
+                <div class="about-slides">
+                    <div class="about-slide-number"></div>
+                    <img class="about-slide-img" src="static/img/7zj4gmjt7s741.jpg">
+                </div>
+
+                <div class="about-slides">
+                    <div class="about-slide-number"></div>
+                    <img class="about-slide-img" src="static/img/co4gny2nt8oz.jpg">
+                </div>
+
+                <a id="about-slideshow-back" onclick="moveToSlide(-1)">
+                    <i class="fa fa-arrow-left icons"></i>
+                </a>
+
+                <a id="about-slideshow-advance" onclick="moveToSlide(1)">
+                    <i class="fa fa-arrow-right icons"></i>
+                </a>
+
+
+                <div id="about-slideshow-navbar">
+                    <a class="about-slideshow-navbar-btn" onclick="goToSlide(this)">
+                        1
+                    </a>
+
+                    <a class="about-slideshow-navbar-btn" onclick="goToSlide(this)">
+                        2
+                    </a>
+                    <a class="about-slideshow-navbar-btn" onclick="goToSlide(this)">
+                        3
+                    </a>
+                    <a class="about-slideshow-navbar-btn" onclick="goToSlide(this)">
+                        4
+                    </a>
+
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
     <div id="overlay">
