--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,10 @@
 
 <body>
 
+    <div id="projects-title">
+        My Projects
+    </div>
+
     <div id="projects-footer">
         <div id="projects-nav-bar">
 
