Added the projects to my projects page

--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,70 @@
         My Projects
     </div>
 
+    <div id="projects-projects-container">
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <div id="projects-footer">
         <div id="projects-nav-bar">
 
