Added the tech stack to the project's description

--- a/projects.html
+++ b/projects.html
@@ -27,15 +27,8 @@
                 <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
-            </div>
-        </div>
-        <div class="projects-projects">
-            <div class="projects-projects-thumbnail">
-            </div>
-            <div class="projects-projects-desc">
-                <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
-                    <i class="fa fa-github icons"></i>
+                <div class="projects-projects-desc-tech-stack" onclick="">
+                    Tech • Stack
                 </div>
             </div>
         </div>
@@ -47,15 +40,8 @@
                 <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
-            </div>
-        </div>
-        <div class="projects-projects">
-            <div class="projects-projects-thumbnail">
-            </div>
-            <div class="projects-projects-desc">
-                <span class="projects-projects-desc-title">Project 1</span>
-                <div class="projects-projects-desc-btn" onclick="">
-                    <i class="fa fa-github icons"></i>
+                <div class="projects-projects-desc-tech-stack" onclick="">
+                    Tech • Stack
                 </div>
             </div>
         </div>
@@ -67,6 +53,9 @@
                 <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
                 </div>
+                <div class="projects-projects-desc-tech-stack" onclick="">
+                    Tech • Stack
+                </div>
             </div>
         </div>
         <div class="projects-projects">
@@ -76,6 +65,35 @@
                 <span class="projects-projects-desc-title">Project 1</span>
                 <div class="projects-projects-desc-btn" onclick="">
                     <i class="fa fa-github icons"></i>
+                </div>
+                <div class="projects-projects-desc-tech-stack" onclick="">
+                    Tech • Stack
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+                <div class="projects-projects-desc-tech-stack" onclick="">
+                    Tech • Stack
+                </div>
+            </div>
+        </div>
+        <div class="projects-projects">
+            <div class="projects-projects-thumbnail">
+            </div>
+            <div class="projects-projects-desc">
+                <span class="projects-projects-desc-title">Project 1</span>
+                <div class="projects-projects-desc-btn" onclick="">
+                    <i class="fa fa-github icons"></i>
+                </div>
+                <div class="projects-projects-desc-tech-stack" onclick="">
+                    Tech • Stack
                 </div>
             </div>
         </div>
