Fix - Typing effect compatibility issue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p id="home-title">
                 Mohamed Y Abdelnasser
             </p>
-            <div id="home-subtitle">‎</div>
+            <div id="home-subtitle"></div>
             <p id="home-desc">
                 Lorem ipsum dolor sit amet primis blandit gravida. Maximus at donec ridiculus litora ad
                 porttitor id
